gccida/g1/bitmap_clear_bit
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/bitmap_clear_bit/src/bitmap.c:845:17: error: expected expression
if ( *( _OWORD *)v6->bits != 0LL ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/bitmap_clear_bit/src/bitmap.c:845:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)v6->bits != 0LL ) 
        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/bitmap_clear_bit/src/obj/bitmap.o] Error 1
